# nonebot-plugin-lottery-signup

./: README.md  pyproject.toml
nonebot_plugin_lottery_signup/: __init__.py  config.py  lottery.py  persistence.py  registration.py  utils.py
