[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nonebot-plugin-lottery-signup"
version = "0.1.1"
description = "NoneBot2 OneBot V11 群聊定时抽奖、即时抽奖与限额报名插件"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "WhyPilotXia" }]
keywords = ["nonebot", "nonebot2", "lottery", "signup", "onebot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "nonebot2>=2.3.0",
    "nonebot-adapter-onebot>=2.2.0",
    "nonebot-plugin-apscheduler>=0.3.0",
]

[project.optional-dependencies]
notion = ["notion-client>=2.2.0"]

[project.urls]
Homepage = "https://github.com/WhyPilotXia/nonebot-plugin-lottery-signup"
Repository = "https://github.com/WhyPilotXia/nonebot-plugin-lottery-signup"
Issues = "https://github.com/WhyPilotXia/nonebot-plugin-lottery-signup/issues"

[tool.hatch.build.targets.wheel]
packages = ["nonebot_plugin_lottery_signup"]

[tool.nonebot]
plugins = ["nonebot_plugin_lottery_signup"]
plugin_dirs = []
builtin_plugins = []
